# Modelos

./: pyproject.toml
Cuadernos/Auxiliares/: 1.4 Modelo simple de clasificación.ipynb  2.1 RNN MPP.ipynb  2.2 LSTM.ipynb
Códigos/: 1. RF_Preprocesamiento y entrenamiento.ipynb  2. GB_Preprocesamiento y entrenamiento.ipynb  3. LogR_Preprocesamiento y entrenamiento.ipynb  4. SVC_Preprocesamiento y entrenamiento copy.ipynb  5. NB_Preprocesamiento y entrenamiento.ipynb
